improvement: modernized netnode add/edit form

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1886,3 +1886,12 @@
     content: @fa-var-broadcast-tower;
   }
 }
+
+.lms-ui-icon-share {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-share-alt;
+  }
+}
