--- a/css/style.less
+++ b/css/style.less
@@ -2210,10 +2210,10 @@ div.lms-ui-wysiwyg-editor {
 					margin: 0.25em;
 				}
 				& .lms-ui-box-row-icon {
-					align-self: flex-start;
+					//align-self: flex-start;
 				}
 				& .lms-ui-box-row-label {
-					align-self: flex-start;
+					//align-self: flex-start;
 					font-weight: bold;
 				}
 				& .lms-ui-box-row-field {
@@ -2221,7 +2221,7 @@ div.lms-ui-wysiwyg-editor {
 					flex-direction: row;
 					justify-content: flex-start;
 					align-items: center;
-					align-self: flex-start;
+					//align-self: flex-start;
 					& > * {
 						margin-right: 0.3em;
 					}
