--- a/templates/default/netnode/netnodeinfobox.html
+++ b/templates/default/netnode/netnodeinfobox.html
@@ -158,10 +158,10 @@
 								{/if}
 								<tr>
 									<td>
-										{icon name="area"}
+										{icon name="share"}
 									</td>
 									<td class="nobr">
-										<strong>{trans("Area sharing")}</strong>
+										<strong>{trans("Sharing surface")}</strong>
 									</td>
 									<td>
 										{if $nodeinfo.uip == 1}
@@ -176,7 +176,7 @@
 										{icon name="antenna"}
 									</td>
 									<td class="nobr">
-										<strong>{trans("Antenna installation")}</strong>
+										<strong>{trans("Antennas installation")}</strong>
 									</td>
 									<td>
 										{if $nodeinfo.miar == 1}
