improvement: modernized netnode forms (some visual fixes)

--- a/css/less/button.less
+++ b/css/less/button.less
@@ -119,6 +119,12 @@ a.lms-ui-link-button {
   }
 }
 
+a.lms-ui-button {
+  i + .lms-ui-label {
+    padding-left: 0.5em;
+  }
+}
+
 a.lms-ui-button:not(.lms-ui-link-button) {
   > i:before {
     color: black;
