--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1895,3 +1895,12 @@
     content: @fa-var-share-alt;
   }
 }
+
+.lms-ui-icon-map {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-map-marked-alt;
+  }
+}
