--- a/templates/default/netnode/netnodeinfobox.html
+++ b/templates/default/netnode/netnodeinfobox.html
@@ -127,7 +127,7 @@
 										<td colspan="2">
 										</td>
 										<td>
-											{button type="link" icon="network" label="Show on map"
+											{button type="link" icon="map" label="Show on map"
 												href="?m=netdevmap&lon={$nodeinfo.longitude}&lat={$nodeinfo.latitude}"}
 										</td>
 									</tr>
