--- a/templates/default/netnode/netnodemodify.html
+++ b/templates/default/netnode/netnodemodify.html
@@ -146,14 +146,14 @@
 			{box_row icon="location" icon_class="fa-fw" label="GPS longitude"}
 				<input id="longitude" type="text" name="netnode[longitude]" value="{$netnode.longitude}"
 					{tip text="Enter node longitude (optional)" trigger="longitude"}>
-				{button type="link" icon="next" tip="Click to select gps coordinates from map"
+				{button type="link" icon="map" tip="Click to select gps coordinates from map"
 					onclick="return gpscoordschoosewin(document.netnode.elements['netnode[longitude]'], document.netnode.elements['netnode[latitude]']);"}
 			{/box_row}
 
 			{box_row icon="location" icon_class="fa-fw" label="GPS latitude"}
 				<input id="latitude" type="text" name="netnode[latitude]" value="{$netnode.latitude}"
 					{tip text="Enter node latitude (optional)" trigger="latitude"}>
-				{button type="link" icon="next" tip="Click to select gps coordinates from map"
+				{button type="link" icon="map" tip="Click to select gps coordinates from map"
 					onclick="return gpscoordschoosewin(document.netnode.elements['netnode[longitude]'], document.netnode.elements['netnode[latitude]']);"}
 			{/box_row}
 
