--- a/templates/default/netnode/netnodedevices.html
+++ b/templates/default/netnode/netnodedevices.html
@@ -54,7 +54,7 @@
 								{trans("ID")}
 							</td>
 							<td class="nobr">
-								{icon name="id"}
+								{icon name="sn"}
 								{trans("Serial number")}
 							</td>
 							<TD>&nbsp;</TD>
