--- a/templates/default/event/eventlistbox_overdue.html
+++ b/templates/default/event/eventlistbox_overdue.html
@@ -11,7 +11,7 @@
 
 </style>
 
-<table class="lmsbox lms-ui-tab-container lms-ui-background-cycle{if !empty($overdue_events)} overdue-events{/if}">
+<table id="event-all" class="lmsbox lms-ui-tab-container lms-ui-background-cycle event-day-table{if !empty($overdue_events)} overdue-events{/if}">
     <colgroup>
         <col style="width: 1%;">
         <col style="width: 1%; min-width:90px;">
