improvement: implemented multi-tab support of sane url returns in event modules - fixes (LMS+#1849)

--- a/templates/default/event/eventinfo.html
+++ b/templates/default/event/eventinfo.html
@@ -128,9 +128,9 @@
 			{/if}
 			{if $event.moduserid != 0}
 				<tr>
-					<d>
+					<td>
 						{icon name="user"}
-					</d>
+					</td>
 					<td class="nobr">
 						<strong>{trans("Last modified by")}</strong>
 					</td>
@@ -290,7 +290,7 @@
 					{icon name="helpdesk"}
 				</td>
 				<td>
-					<strong>{trans("Helpdesk assignment:")}</strong>
+					<strong>{trans("Helpdesk assignment")}</strong>
 				</td>
 				<td>
 					#{$event.ticketid|string_format:"%06d"}
