bugfix: fixed translation

--- a/templates/default/netdev/netdevmodify.html
+++ b/templates/default/netdev/netdevmodify.html
@@ -147,7 +147,7 @@
 							{tip trigger="clients"}>
 				{/box_row}
 
-				{box_row icon="radius" icon_class="fa-fw" label="Login"}
+				{box_row icon="radius" icon_class="fa-fw" label="<!radius>Login"}
 					<input type="text" name="netdev[login]" value="{$netdev.login}" maxlength="60">
 				{/box_row}
 
